connect all dark mode pages to each other correctly

--- a/css/Dgallerystyles.css
+++ b/css/Dgallerystyles.css
@@ -29,7 +29,7 @@ body {
   padding: 0;
   left: 0px;
   width: 140px;
-  background-color: #f1f1f1;
+  background-color: #444141da;
   position: fixed;
   height: 100%;
   overflow: auto;
